<resources>
    <string name="app_name">AndroidKotlinFinal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="followers">%d Followers</string>
    <string name="company">Company: %s</string>
    <string name="email">Email: %s</string>
    <string name="blog">My Blog: %s</string>
    <string name="github">Github: %s</string>
    <string name="created_at">Since %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_gender"><b>Select Gender</b></string>
    <string name="sub_title_gender">Calories &amp; stride length calculation needs it.</string>
    <string name="submit"><b>Submit</b></string>
    <string name="my_profile_subtitle">To ensure the accuracy, please input your accurate information. We never share them with third parties.</string>
    <string name="my_profile"><b>My Profile</b></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Test Title</string>
    <string name="next"><b>Next</b></string>
    <string name="height">Height</string>
    <string name="weight">weight</string>
</resources>