<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.androidkotlinfinal.features.begin.profile.SetupProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.begin.profile.SetupProfileFragment">

    <TextView
        android:id="@+id/txt_my_profile"
        android:text="@string/my_profile"
        android:textSize="24sp"
        android:textColor="@color/yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:enabled="false"
        />
    <TextView
        android:id="@+id/txt_my_profile_subtitle"
        android:text="@string/my_profile_subtitle"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:textColor="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_my_profile" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_my_profile_subtitle"
        app:dividerColor="@color/gray"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginVertical="32dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_one"
        android:layout_marginTop="@dimen/margin_32"
        android:hint="@string/height"
        android:textColorHint="@color/gray"
        app:hintTextColor="@color/gray"
        android:background="@color/transparent"
        android:layout_marginHorizontal="@dimen/margin_16"
        style="@style/myOutlineTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="5"
            android:textColorHint="@color/gray"
            android:textSize="18sp"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_height"
            android:layout_marginTop="@dimen/margin_16"
            android:hint="@string/weight"
            app:hintTextColor="@color/gray"
            android:textColorHint="@color/gray"
            android:background="@color/transparent"
            android:layout_marginHorizontal="@dimen/margin_16"
            style="@style/myOutlineTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:textColorHint="@color/gray"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/submit"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/button"
            android:enabled="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>