<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".features.begin.gender.GenderFragment">

        <TextView
            android:id="@+id/txt_select_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/select_gender"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sub_title_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunitosans_regular"
            android:gravity="center"
            android:text="@string/sub_title_gender"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_select_gender" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_male"
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/card_view_female"
            app:layout_constraintTop_toBottomOf="@id/sub_title_gender"
            app:strokeColor="@color/yellow"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/img_male"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_man"
                android:backgroundTint="@color/yellow">
            </ImageView>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_female"
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintLeft_toRightOf="@id/card_view_male"
            app:layout_constraintTop_toBottomOf="@id/sub_title_gender"
            app:layout_constraintRight_toRightOf="parent"
            app:strokeColor="@color/inactive"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/img_female"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_femail"
                android:backgroundTint="@color/inactive">
            </ImageView>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:backgroundTint="@color/yellow"
            android:text="@string/next"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:cornerRadius="12dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>